<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/CheckInTitle"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="bottom"
            android:text="@string/profile"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="24sp" />

        <View
            android:id="@+id/profileDivider"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/red"
            android:backgroundTint="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/percentileCircle"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/circle"
                android:backgroundTint="#11DF19"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/percentileNum"
                android:textSize="24sp"
                android:visibility="visible" />

        </LinearLayout>

        <TextView
            android:id="@+id/passwordChange3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:text="@string/graphDescription"
            android:textSize="12sp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <TextView
            android:id="@+id/percentileText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:text="@string/percentile"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/statsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/statsSentence"
            android:textSize="18sp" />

        <View
            android:id="@+id/profileDivider2"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/red"
            android:backgroundTint="@color/red" />

        <TextView
            android:id="@+id/passwordChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:text="@string/changePassword"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passworChangeInput"
                android:layout_width="220sp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5sp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:ems="20"
                android:hint="@string/atleast"
                android:inputType="textPassword"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_weight="1"
                android:text="@string/update"
                android:textSize="10sp" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:backgroundTint="@color/red"
            android:text="@string/signout"
            app:cornerRadius="8dp" />

    </LinearLayout>
</RelativeLayout>