<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="35sp"
        android:layout_marginTop="70sp"
        >
        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_text"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/LOGIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/empty"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/fullnameememail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullnameemail"
        android:layout_marginStart="20sp"
        android:layout_marginTop="40sp"
        android:textSize="12sp"
        />

    <EditText
        android:id="@+id/fullnameinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:ems="20"
        android:hint="@string/loginemail"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginVertical="5sp"
        android:textSize="12sp"
        android:layout_marginStart="20sp"
        />

    <EditText
        android:id="@+id/passwordinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:ems="20"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:backgroundTint="@color/red"
        android:text="@string/login_text"
        app:cornerRadius="8dp" />


    <TextView
        android:id="@+id/terms1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:gravity="center"
        android:text="@string/login1"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/terms2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:gravity="center"
        android:text="@string/login2"
        android:textSize="12sp"
        android:textStyle="bold" />



</LinearLayout>