<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/CheckInTitle"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="bottom"
            android:text="@string/checkin"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="24sp" />

        <View
            android:id="@+id/checkinDivider"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/red"
            android:backgroundTint="@color/red" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/search_bar_home"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bottomborder"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="350sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/SafetyTitle"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="bottom"
            android:text="@string/covidSafety"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="24sp" />

        <View
            android:id="@+id/checkinDivider2"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/red"
            android:backgroundTint="@color/red" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/alertCircle"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="5sp"
                android:background="@drawable/circle"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alertTextZone"
                    android:layout_width="wrap_content"
                    android:layout_height="40sp"
                    android:gravity="center_vertical"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/alertTextNumCases"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:text="@string/safetyTextLoading"
                    android:textAlignment="textStart" />

                <!--
                <TextView
                    android:id="@+id/alertTextNumReports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/safetyTextNumReports" />
                -->
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>